--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,6 @@ set(SOURCE_FILES
   lua_event_demo.cpp
 )
 
-add_library(event_demo SHARED ${SOURCE_FILES})
+add_library(event_demo MODULE ${SOURCE_FILES})
 set_target_properties(event_demo PROPERTIES PREFIX "") # string `lib` prefix
 target_link_libraries(event_demo pthread)
