--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2)
 
 set(LUA_MODULE_NAME "event_demo")
 
-project(lua-module CXX)
+project(lua-extension CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3")
@@ -11,18 +11,20 @@ include(FindPkgConfig)
 pkg_check_modules(LIBLUA REQUIRED lua-5.3)
 include_directories(${LIBLUA_INCLUDE_DIRS})
 
-set(NORNS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/dep/norns")
-
-include_directories("${NORNS_SOURCE_DIR}/matron/src")
-include_directories("${NORNS_SOURCE_DIR}/source")
-
+#
+# module
+#
 set(SOURCE_FILES
   lua_event_demo.cpp
 )
 
-add_library(lua-module MODULE ${SOURCE_FILES})
-set_target_properties(lua-module PROPERTIES
+add_library(lua-extension MODULE ${SOURCE_FILES})
+set_target_properties(lua-extension PROPERTIES
   PREFIX ""     # strip `lib` prefix
   OUTPUT_NAME "${LUA_MODULE_NAME}"
 )
-target_link_libraries(lua-module pthread)
+
+set(NORNS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/dep/norns")
+target_include_directories(lua-extension PUBLIC "${NORNS_SOURCE_DIR}/matron/src")
+
+target_include_directories(lua-extension PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
